--- a/styles/main.css
+++ b/styles/main.css
@@ -12001,3 +12001,32 @@ main .nav-pills {
 main .nav-pills .nav-link:not(.active):hover {
   background-color: var(--bs-gray-200);
 }
+
+
+/*!
+Login Page CSS
+ */
+
+.gradient-custom-2 {
+  /* fallback for old browsers */
+  background: #90fcc8;
+
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right, #50ee248c, #d8ad36, #36dd8a, #45a5b4);
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+}
+
+@media (min-width: 768px) {
+  .gradient-form {
+    height: 100vh !important;
+  }
+}
+
+@media (min-width: 769px) {
+  .gradient-custom-2 {
+    border-top-right-radius: .3rem;
+    border-bottom-right-radius: .3rem;
+  }
+}
