--- a/styles/main.css
+++ b/styles/main.css
@@ -12012,10 +12012,10 @@ Login Page CSS
   background: #90fcc8;
 
   /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(to right, #50ee248c, #d8ad36, #36dd8a, #45a5b4);
+  background: -webkit-linear-gradient(to right, #22690e8c, #d8ad36, #36dd8a, #45a5b4);
 
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+  background: linear-gradient(to right, #22690e8c, #45a5b4);
 }
 
 @media (min-width: 768px) {
