--- a/styles/main.scss
+++ b/styles/main.scss
@@ -36,11 +36,14 @@ body {
   max-height: 100vh;
   overflow-x: auto;
   overflow-y: hidden;
+
   a:hover {
     text-decoration: underline !important;
   }
+
   .nav-pills {
     --bs-nav-pills-link-active-bg: var(--bs-primary);
+
     & .nav-link:not(.active):hover {
       background-color: var(--bs-gray-200);
     }
@@ -52,29 +55,18 @@ footer {
   background-color: var(--bs-secondary-bg) !important;
   color: white;
   min-height: 550px;
+
   h5 {
-    font-size: calc(
-      14px + (18 - 14) * ((100vw - 360px) / (1600 - 360))
-    ) !important;
+    font-size: calc(14px + (18 - 14) * ((100vw - 360px) / (1600 - 360))) !important;
   }
 
   button {
-    font-size: calc(
-      13px + (16 - 13) * ((100vw - 360px) / (1600 - 320))
-    ) !important;
+    font-size: calc(13px + (16 - 13) * ((100vw - 360px) / (1600 - 320))) !important;
     border-radius: 0 !important;
-    padding-left: calc(
-      20px + (28 - 20) * ((100vw - 360px) / (1600 - 360))
-    ) !important;
-    padding-right: calc(
-      20px + (28 - 20) * ((100vw - 360px) / (1600 - 360))
-    ) !important;
-    padding-top: calc(
-      10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))
-    ) !important;
-    padding-bottom: calc(
-      10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))
-    ) !important;
+    padding-left: calc(20px + (28 - 20) * ((100vw - 360px) / (1600 - 360))) !important;
+    padding-right: calc(20px + (28 - 20) * ((100vw - 360px) / (1600 - 360))) !important;
+    padding-top: calc(10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))) !important;
+    padding-bottom: calc(10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))) !important;
     background-color: #383431 !important;
     border: none !important;
   }
@@ -101,9 +93,7 @@ footer {
     vertical-align: middle !important;
     text-align: center !important;
     color: #42443e !important;
-    font-size: calc(
-      12px + (14 - 12) * ((100vw - 360px) / (1600 - 360))
-    ) !important;
+    font-size: calc(12px + (14 - 12) * ((100vw - 360px) / (1600 - 360))) !important;
   }
 
   input {
@@ -134,15 +124,11 @@ footer {
   }
 
   small {
-    font-size: calc(
-      12px + (14 - 12) * ((100vw - 360px) / (1600 - 360))
-    ) !important;
+    font-size: calc(12px + (14 - 12) * ((100vw - 360px) / (1600 - 360))) !important;
   }
 
   p {
-    font-size: calc(
-      10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))
-    ) !important;
+    font-size: calc(10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))) !important;
   }
 
   .social {
@@ -157,9 +143,7 @@ footer {
   .fa {
     background-color: #42443e !important;
     padding: calc(6px + (8 - 6) * ((100vw - 360px) / (1600 - 360))) !important;
-    font-size: calc(
-      14px + (15 - 14) * ((100vw - 360px) / (1600 - 360))
-    ) !important;
+    font-size: calc(14px + (15 - 14) * ((100vw - 360px) / (1600 - 360))) !important;
     width: calc(23px + (30 - 23) * ((100vw - 360px) / (1600 - 360))) !important;
     text-align: center;
     text-decoration: none;
@@ -179,9 +163,7 @@ footer {
   }
 
   a span {
-    font-size: calc(
-      14px + (13 - 14) * ((100vw - 360px) / (1600 - 360))
-    ) !important;
+    font-size: calc(14px + (13 - 14) * ((100vw - 360px) / (1600 - 360))) !important;
   }
 
   .active-1 span:hover {
@@ -197,9 +179,7 @@ footer {
   .third-row li {
     justify-content: space-between !important;
     border-radius: 50px;
-    font-size: calc(
-      9px + (12 - 9) * ((100vw - 360px) / (1600 - 360))
-    ) !important;
+    font-size: calc(9px + (12 - 9) * ((100vw - 360px) / (1600 - 360))) !important;
   }
 
   li.active-1 {
@@ -213,9 +193,7 @@ footer {
   }
 
   figcaption {
-    font-size: calc(
-      10px + (14 - 10) * ((100vw - 360px) / (1600 - 360))
-    ) !important;
+    font-size: calc(10px + (14 - 10) * ((100vw - 360px) / (1600 - 360))) !important;
     text-align: center !important;
     justify-content: center !important;
     justify-self: center !important;
