--- a/styles/main.css
+++ b/styles/main.css
@@ -11996,9 +11996,6 @@ body {
   overflow-x: auto;
   overflow-y: hidden;
 }
-body a:hover {
-  text-decoration: underline !important;
-}
 body .nav-pills {
   --bs-nav-pills-link-active-bg: var(--bs-primary);
 }
@@ -12011,6 +12008,9 @@ footer {
   background-color: var(--bs-secondary-bg) !important;
   color: white;
   min-height: 550px;
+}
+footer a:not(.fa):hover {
+  text-decoration: underline !important;
 }
 footer h5, footer .h5 {
   font-size: calc(14px + 4 * (100vw - 360px) / 1240) !important;
@@ -12131,4 +12131,80 @@ footer figcaption {
 }
 footer figure img {
   width: calc(40px + 30 * (100vw - 360px) / 1240) !important;
+}
+
+#profile-modal .wrapper {
+  padding: 30px 50px !important;
+  border: 1px solid #c1c1c1 !important;
+  border-radius: 15px;
+  max-width: 600px;
+}
+#profile-modal .wrapper h4, #profile-modal .wrapper .h4 {
+  letter-spacing: -1px;
+  font-weight: 400;
+}
+#profile-modal .wrapper .img {
+  width: 70px;
+  height: 70px;
+  border-radius: 6px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+#profile-modal .wrapper #img-section p,
+#profile-modal .wrapper #deactivate p {
+  font-size: 12px;
+  color: #777;
+  margin-bottom: 10px;
+  text-align: justify;
+}
+#profile-modal .wrapper #img-section b,
+#profile-modal .wrapper #img-section button,
+#profile-modal .wrapper #deactivate b {
+  font-size: 14px;
+}
+#profile-modal .wrapper label {
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 500;
+  color: #777;
+  padding-left: 3px;
+}
+#profile-modal .wrapper .form-control {
+  border-radius: 10px;
+}
+#profile-modal .wrapper input[placeholder] {
+  font-weight: 500;
+}
+#profile-modal .wrapper .form-control:focus {
+  box-shadow: none;
+  border: 1.5px solid #0779e4;
+}
+#profile-modal .wrapper select {
+  display: block;
+  width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  height: 40px;
+  padding: 5px 10px;
+  /* -webkit-appearance: none; */
+}
+#profile-modal .wrapper select:focus {
+  outline: none;
+}
+#profile-modal .wrapper .button {
+  background-color: #fff !important;
+  color: #0779e4 !important;
+}
+#profile-modal .wrapper .button:hover {
+  background-color: #0779e4 !important;
+  color: #fff !important;
+}
+#profile-modal .wrapper .danger {
+  background-color: #fff;
+  color: #e20404;
+  border: 1px solid #ddd;
+}
+#profile-modal .wrapper .danger:hover {
+  background-color: #e20404;
+  color: #fff;
 }
