--- a/styles/main.scss
+++ b/styles/main.scss
@@ -37,10 +37,6 @@ body {
   overflow-x: auto;
   overflow-y: hidden;
 
-  a:hover {
-    text-decoration: underline !important;
-  }
-
   .nav-pills {
     --bs-nav-pills-link-active-bg: var(--bs-primary);
 
@@ -55,18 +51,32 @@ footer {
   background-color: var(--bs-secondary-bg) !important;
   color: white;
   min-height: 550px;
-
+  a:not(.fa):hover {
+    text-decoration: underline !important;
+  }
   h5 {
-    font-size: calc(14px + (18 - 14) * ((100vw - 360px) / (1600 - 360))) !important;
+    font-size: calc(
+      14px + (18 - 14) * ((100vw - 360px) / (1600 - 360))
+    ) !important;
   }
 
   button {
-    font-size: calc(13px + (16 - 13) * ((100vw - 360px) / (1600 - 320))) !important;
+    font-size: calc(
+      13px + (16 - 13) * ((100vw - 360px) / (1600 - 320))
+    ) !important;
     border-radius: 0 !important;
-    padding-left: calc(20px + (28 - 20) * ((100vw - 360px) / (1600 - 360))) !important;
-    padding-right: calc(20px + (28 - 20) * ((100vw - 360px) / (1600 - 360))) !important;
-    padding-top: calc(10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))) !important;
-    padding-bottom: calc(10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))) !important;
+    padding-left: calc(
+      20px + (28 - 20) * ((100vw - 360px) / (1600 - 360))
+    ) !important;
+    padding-right: calc(
+      20px + (28 - 20) * ((100vw - 360px) / (1600 - 360))
+    ) !important;
+    padding-top: calc(
+      10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))
+    ) !important;
+    padding-bottom: calc(
+      10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))
+    ) !important;
     background-color: #383431 !important;
     border: none !important;
   }
@@ -93,7 +103,9 @@ footer {
     vertical-align: middle !important;
     text-align: center !important;
     color: #42443e !important;
-    font-size: calc(12px + (14 - 12) * ((100vw - 360px) / (1600 - 360))) !important;
+    font-size: calc(
+      12px + (14 - 12) * ((100vw - 360px) / (1600 - 360))
+    ) !important;
   }
 
   input {
@@ -124,11 +136,15 @@ footer {
   }
 
   small {
-    font-size: calc(12px + (14 - 12) * ((100vw - 360px) / (1600 - 360))) !important;
+    font-size: calc(
+      12px + (14 - 12) * ((100vw - 360px) / (1600 - 360))
+    ) !important;
   }
 
   p {
-    font-size: calc(10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))) !important;
+    font-size: calc(
+      10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))
+    ) !important;
   }
 
   .social {
@@ -143,7 +159,9 @@ footer {
   .fa {
     background-color: #42443e !important;
     padding: calc(6px + (8 - 6) * ((100vw - 360px) / (1600 - 360))) !important;
-    font-size: calc(14px + (15 - 14) * ((100vw - 360px) / (1600 - 360))) !important;
+    font-size: calc(
+      14px + (15 - 14) * ((100vw - 360px) / (1600 - 360))
+    ) !important;
     width: calc(23px + (30 - 23) * ((100vw - 360px) / (1600 - 360))) !important;
     text-align: center;
     text-decoration: none;
@@ -163,7 +181,9 @@ footer {
   }
 
   a span {
-    font-size: calc(14px + (13 - 14) * ((100vw - 360px) / (1600 - 360))) !important;
+    font-size: calc(
+      14px + (13 - 14) * ((100vw - 360px) / (1600 - 360))
+    ) !important;
   }
 
   .active-1 span:hover {
@@ -179,7 +199,9 @@ footer {
   .third-row li {
     justify-content: space-between !important;
     border-radius: 50px;
-    font-size: calc(9px + (12 - 9) * ((100vw - 360px) / (1600 - 360))) !important;
+    font-size: calc(
+      9px + (12 - 9) * ((100vw - 360px) / (1600 - 360))
+    ) !important;
   }
 
   li.active-1 {
@@ -193,7 +215,9 @@ footer {
   }
 
   figcaption {
-    font-size: calc(10px + (14 - 10) * ((100vw - 360px) / (1600 - 360))) !important;
+    font-size: calc(
+      10px + (14 - 10) * ((100vw - 360px) / (1600 - 360))
+    ) !important;
     text-align: center !important;
     justify-content: center !important;
     justify-self: center !important;
@@ -201,5 +225,85 @@ footer {
 
   figure img {
     width: calc(40px + (70 - 40) * ((100vw - 360px) / (1600 - 360))) !important;
+  }
+}
+#profile-modal {
+  .wrapper {
+    padding: 30px 50px !important;
+    border: 1px solid #c1c1c1 !important;
+    border-radius: 15px;
+    max-width: 600px;
+    h4 {
+      letter-spacing: -1px;
+      font-weight: 400;
+    }
+    .img {
+      width: 70px;
+      height: 70px;
+      border-radius: 6px;
+      object-fit: cover;
+    }
+    #img-section p,
+    #deactivate p {
+      font-size: 12px;
+      color: #777;
+      margin-bottom: 10px;
+      text-align: justify;
+    }
+    #img-section b,
+    #img-section button,
+    #deactivate b {
+      font-size: 14px;
+    }
+
+    label {
+      margin-bottom: 0;
+      font-size: 14px;
+      font-weight: 500;
+      color: #777;
+      padding-left: 3px;
+    }
+
+    .form-control {
+      border-radius: 10px;
+    }
+
+    input[placeholder] {
+      font-weight: 500;
+    }
+    .form-control:focus {
+      box-shadow: none;
+      border: 1.5px solid #0779e4;
+    }
+    select {
+      display: block;
+      width: 100%;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      height: 40px;
+      padding: 5px 10px;
+      /* -webkit-appearance: none; */
+    }
+
+    select:focus {
+      outline: none;
+    }
+    .button {
+      background-color: #fff !important;
+      color: #0779e4 !important;
+    }
+    .button:hover {
+      background-color: #0779e4 !important;
+      color: #fff !important;
+    }
+    .danger {
+      background-color: #fff;
+      color: #e20404;
+      border: 1px solid #ddd;
+    }
+    .danger:hover {
+      background-color: #e20404;
+      color: #fff;
+    }
   }
 }
