--- a/styles/main.css
+++ b/styles/main.css
@@ -12132,3 +12132,32 @@ footer figcaption {
 footer figure img {
   width: calc(40px + 30 * (100vw - 360px) / 1240) !important;
 }
+
+
+/*
+Login Page CSS
+*/
+
+.gradient-custom-2 {
+  /* fallback for old browsers */
+  background: #009E4D;
+
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right, #33aa59, #33aa59, #009E4D, #009E4D);
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, #33aa59, #33aa59, #009E4D, #009E4D);
+}
+
+@media (min-width: 768px) {
+  .gradient-form {
+    height: 100vh !important;
+  }
+}
+
+@media (min-width: 769px) {
+  .gradient-custom-2 {
+    border-top-right-radius: .3rem;
+    border-bottom-right-radius: .3rem;
+  }
+}
