--- a/styles/subject/styles.css
+++ b/styles/subject/styles.css
@@ -1,3 +1,18 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  padding-top: 40px;
+  background-color: #ccc;
+}
+@media (max-width: 768px) {
+  body {
+    padding: 20px;
+  }
+}
 body ul {
   padding-left: 0;
 }
@@ -9,7 +24,7 @@ body ul {
   display: grid;
   grid-template-columns: 200px auto 200px;
   -moz-column-gap: 56px;
-  column-gap: 56px;
+       column-gap: 56px;
 }
 @media (max-width: 768px) {
   .container {
@@ -56,6 +71,7 @@ body ul {
   padding: 40px 40px 0 40px;
   background-color: #fff;
   border-radius: 15px;
+  margin-bottom: 30px;
 }
 .post__avatar img {
   width: 40px;
@@ -133,7 +149,7 @@ body ul {
   border: 1px solid #ccc;
 }
 .publicacao__input input:hover {
-  background-color: #dddddd;
+  background-color: #DDDDDD;
   cursor: pointer;
 }
 
@@ -142,7 +158,7 @@ body ul {
 }
 
 .highlight-on-hover:hover {
-  background-color: #dddddd;
+  background-color: #DDDDDD;
   cursor: pointer;
   border-radius: 10px;
 }
